Set height limit to button class to prevent overflow & add more clear action buttons in AddToSHoppingList modal

--- a/resources/assets/scss/global/buttons.scss
+++ b/resources/assets/scss/global/buttons.scss
@@ -15,6 +15,7 @@ button {
     border-radius: 8px;
     background-color: $color-secondary;
     color: $color-white;
+    max-height: 44px;
 
     &.primary {
         background-color: $color-primary;
